results/print-ast/expected/failure/parser/missing_value.psy.out
error: syntax error, unexpected ;
  --> tests/failure/parser/missing_value.psy:1:26
   |
  1| var int missing_value = ;
   |                          ^--- Here

